<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.sokolx.coach.activities.LoginActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="452dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/textViewUserLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/user_login"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/enter_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_have_an_account_sign_up_here"
            android:textAlignment="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
