<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="377dp"
        android:layout_height="485dp"
        android:gravity="center"
        android:layout_margin="15dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="4dp"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_mail"
            android:inputType="textEmailAddress"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/enter_your_locations"
            android:inputType="textPersonName"
            android:textSize="17dp" />

        <Spinner
            android:id="@+id/spinnerGender"
            style="@android:style/Widget.Spinner"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:entries="@array/gender_list"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonDateOfBirth"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date_of_birth"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textViewHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/height_string"
            android:textSize="20dp" />

        <NumberPicker
            android:id="@+id/numberPickerHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:elevation="150dp"
            android:hapticFeedbackEnabled="false"
            android:keepScreenOn="false"
            android:orientation="horizontal"
            android:theme="@android:style/Theme.Dialog" />

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/weight_string"
            android:textSize="20dp" />

        <NumberPicker
            android:id="@+id/numberPickerWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:elevation="1dp"
            android:orientation="horizontal"
            android:theme="@android:style/Theme.Dialog"
            android:layout_weight="0.45" />

        <TextView
            android:id="@+id/textViewBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/your_bmi"
            android:textAlignment="center"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewFirstBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/registerButton_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteY="457dp" />

</android.support.constraint.ConstraintLayout>