<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="true"
    android:padding="10dp"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="@drawable/background_history">

    <TextView
        android:id="@+id/textViewNumberTraining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_nr"
        android:textColor="#000000"
        android:textSize="18dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_below="@+id/textViewNumberTraining"
            android:id="@+id/linearLayoutSecondLine"
            >

        <TextView
            android:id="@+id/textViewNumberStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/date_from_to"
            android:textSize="16dp"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout3rd">

        <TextView
            android:id="@+id/textViewDateOfCounterStepEver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/count_steps_out_of_steps"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3rd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayoutSecondLine">

        <TextView
            android:id="@+id/textViewDuration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/duration"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="16dp" />


    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBarOneTrening"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:scrollbarSize="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textViewPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/percent"
            android:textColor="#ffffff"
            android:textSize="16dp"
            android:textStyle="bold" />

    </RelativeLayout>
    </FrameLayout>
</RelativeLayout>